fixed java VERSION to 11